--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,10 @@
         }
     ],
     "require": {
-        "php": "~5.4",
+        "php": ">=5.5",
         "twig/twig": "~1.15",
         "pimple/pimple": "~2.0",
         "leafo/lessphp": "~0.4",
-        "ircmaxell/password-compat": "~1.0",
         "symfony/event-dispatcher": "~2.6",
         "symfony/http-foundation": "~2.6",
         "symfony/http-kernel": "~2.6",
